# badminbot-v3

./: README.md  badminbot-v3.cabal  cabal.project  flake.nix
.github/workflows/: ci.yaml
src/: Bot.hs  Command.hs  Poll.hs  ScheduleJob.hs
test/: Main.hs
