cabal-version: 3.4
name:          badminbot-v3
version:       0.1.0.0
license:       GPL-3.0-only
license-file:  LICENSE
author:        Ben
build-type:    Simple

common warnings
  ghc-options: -Wall -Wno-unused-do-bind

library
  import:             warnings
  ghc-options:        -O1
  exposed-modules:
    Bot
    Command
    Poll
    ScheduleJob

  build-depends:
    , aeson
    , async
    , base             ^>=4.18.2.1
    , bytestring
    , directory
    , discord-haskell
    , modern-uri
    , mtl
    , parsec
    , random
    , req
    , text
    , time
    , unliftio

  default-extensions:
    OverloadedRecordDot
    RecordWildCards

  hs-source-dirs:     src
  default-language:   Haskell2010

executable badminbot-v3
  import:           warnings
  ghc-options:      -O1 -threaded -rtsopts -with-rtsopts=-N
  main-is:          Main.hs
  build-depends:
    , badminbot-v3
    , base          ^>=4.18.2.1

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite badminbot-v3-test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , badminbot-v3
    , base             ^>=4.18.2.1
    , discord-haskell
    , hspec
    , mtl
    , text
    , time
